<!--
  ~ /*
  ~  * Copyright (C) 2018 L.D'Abreo
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  ~
  -->

<resources>
    <string name="app_name">Planning Alerts</string>
    <string name="search_caption">Enter address&#8230;</string>
    <string name="Search">Enter address&#8230;</string>
    <string name="search_here">Search Here.</string>

    <string name="nav_search">Search</string>
    <string name="nav_scan_domain_code">Scan QR</string>
    <string name="nav_raisealert">Create Alert</string>
    <string name="nav_about">About</string>


    <string name="spinner_search">Search</string>
    <string name="spinner_current_location">Current Location</string>
    <string name="spinner_domain_qr">Scan Domain Code</string>

    <string name="planningalerts.location.lat">planningalerts.location.lat</string>
    <string name="planningalerts.location.lng">planningalerts.location.lng</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="permission_location_rationale">Access to the current location is needed to detect nearby alerts</string>
    <string name="no_camera_permission">Unable to scan QR code</string>
    <string name="no_location_permission">Unable todetect the current location. Zoom manually</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>

    <string name="about_title">About PlanningAlerts</string>
    <string name="donate_title">Back PlanningAlerts</string>
    <string name="email_title">Email us at</string>

    <string name="about_text">You\'d probably know if your next door neighbour was going to knock their house down (you\'d get a letter through the door telling you they had
        applied for planning permission and asking you what you thought about it). But you\'d probably never find out if the old cinema or pub 5 streets
        away is going to be converted into luxury flats until the bulldozers turned up.
        \n\nPlanningAlerts mobile is a free app that uses the data provided by PlanningAlerts to map details of development applications near you.
        The aim of this to enable shared scrutiny of what is being built (and knocked down) in peoples\' communities.
        \n
        \nYou can search for planning applications by:
        \n&#x2022; Entering an address
        \n&#x2022; Using the current location or
        \n&#x2022; Scanning a Domain QR code from a property magazine
        \n\nPlanningAlerts Mobile is brought to you by L.D\'Abreo, made possible by PlanningAlerts which is run by the charity
        <a href="https://www.oaf.org.au/">OpenAustralia Foundation</a>
    </string>

    <string name="donate_text">The Planning Alerts website is project is run by a local charity,
        the OpenAustralia Foundation. PlanningAlerts is powered by small, tax-deductible donations from the people who use it to stay informed about changes to their local area. If you find it useful, chip in to support PlanningAlerts.</string>
    <string name="email_text">contact@planningalerts.org.au</string>

    <string name="instruction_text1">Enter an address to find development applications. Recent alerts are shown in Red, olders alerts in yellow</string>
    <string name="instruction_hint">Enter address, street name</string>

    <string name="crosshairs_content_desc">Centre cross-hairs over QR code</string>
    <string name="search_icon_content_desc">Search option</string>
    <string name="alert_ref">%s - Ref:</string>
    <string name="version">Version</string>
    <string name="loading">Loading Alerts&#8230;</string>


    <string name="recent">Newer</string>
    <string name="older">Older</string>
    <string name="gaugecontentdesc">Gauge</string>

</resources>
