<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 L.D'Abreo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_recktangle"
    android:orientation="vertical"
    android:padding="8dp"
    android:paddingVertical="16dp">

    <!-- About view for showing app details -->

    <LinearLayout
        android:id="@+id/aboutDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_white_recktangle"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:clickable="true"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="top"
            android:singleLine="true"
            android:text="@string/about_title"
            android:textSize="14sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoLink="web"
            android:clickable="true"
            android:gravity="top"
            android:text="@string/about_text"
            android:textSize="12sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/versionDonateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_white_recktangle"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingVertical="8dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/donate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:clickable="true"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="top"
            android:singleLine="true"
            android:text="@string/donate_title"
            android:textSize="14sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/donate_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoLink="web"
            android:clickable="true"
            android:gravity="top"
            android:text="@string/donate_text"
            android:textSize="12sp">

        </TextView>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/emailDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_white_recktangle"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="top"
            android:singleLine="true"

            android:text="@string/email_title"
            android:textSize="14sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoLink="email"
            android:clickable="true"
            android:gravity="top"
            android:singleLine="true"
            android:text="@string/email_text"
            android:textSize="12sp">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/versionDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_white_recktangle"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingVertical="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:singleLine="true"
            android:text="@string/version"
            android:textSize="14sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/versionDetailsNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:textSize="12sp">

        </TextView>

    </LinearLayout>


</LinearLayout>
