<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (C) 2018 L.D'Abreo
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gaugePanel"
    android:layout_width="175dp"
    android:layout_height="50dp"
    android:layout_gravity="center|bottom"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/rounded_white_recktangle"
    android:elevation="10dp"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:padding="5dp"
    android:visibility="invisible">


    <ImageView
        android:id="@+id/guage"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/gaugecontentdesc"
        android:scaleType="centerCrop"
        android:src="@drawable/colourguage" />

    <TextView
        android:id="@+id/recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guage"
        android:layout_alignParentStart="true"
        android:gravity="top"
        android:text="@string/recent"
        android:textColor="#2c9eb5"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/oldest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guage"
        android:layout_alignParentEnd="true"
        android:gravity="top"
        android:text="@string/older"
        android:textColor="#2c9eb5"
        android:textSize="12sp" />


</RelativeLayout>